--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,11 @@
 
   <!-- WhatsApp (código cliente) -->
   <script type="text/javascript" src="https://leads.godixital.com/js/whatsapp_button/whatsapp_button.php"></script>
-  
+
+  <!-- Chat robot -->
+  <link href="https://chat.godixital.com/chat/css/chat.css" rel="stylesheet">
+  <script type="text/javascript" src="https://chat.godixital.com/chat/js/index.php?is_wordpress=1"></script>
+
 </head>
 
 <body>
