update mp y publi

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,14 @@
   <link href="https://chat.godixital.com/chat/css/chat.css" rel="stylesheet">
   <script type="text/javascript" src="https://chat.godixital.com/chat/js/index.php?is_wordpress=1"></script>
   -->
+
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "sg0pvurukp");
+  </script>
 </head>
 
 <body>
